Fixed bad CSS line spacing

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -50,7 +50,7 @@ img {
             font-size: 16px;
             text-shadow: #000 2px 2px 0;
             margin: 10px 0;
-            line-height: 2px;
+            line-height: 2em;
         }
     }
 }
